<resources>
    <string name="app_name">analogpenpal</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!--회원가입-->
    <string name="id_kr">아이디</string>
    <string name="id_en">ID</string>
    <string name="idhinttxt_kr">아이디를 입력해주세요.(20자이하)</string>
    <string name="idhinttxt_en">enter ID.(Under 20 character).</string>
    <string name="password_kr">비밀번호</string>
    <string name="password_en">password</string>
    <string name="pwhinttxt_kr">비밀번호를 입력해주세요.(20자이하)</string>
    <string name="pwhinttxt_en">enter password.</string>
    <string name="confirmpw_kr">비밀번호 확인</string>
    <string name="confirmpw_en">confirm password</string>
    <string name="pwconfrimhint_kr">비밀번호를 한번 더 입력해주세요.</string>
    <string name="pwconfrimhint_en">enter password again.</string>
    <string name="name_kr">이름</string>
    <string name="namehinttxt_kr">이름을 입력해주세요.(20자이하)</string>
    <string name="namehinttxt_en">enter Name.(Under 20 character).</string>
    <string name="age_kr">나이</string>
    <string name="age_en">age</string>
    <string name="agehinttxt_kr">나이를 입력해주세요.</string>
    <string name="agehinttxt_en">enter age.</string>
    <string name="sex_kr">성별</string>
    <string name="sex_en">sex</string>
    <string name="male_kr">남</string>
    <string name="male_en">male</string>
    <string name="female_kr">여</string>
    <string name="female_en">female</string>
    <string name="selectinterests_kr">관심사를 선택해 주세요.(3개)</string>
    <string name="selectinterests_en">select your interests.(3 things)</string>
    <string name="signin_kr">회원가입</string>
    <string name="signin_en">Sign In</string>
    <string name="login_kr">로그인</string>
    <string name="login_en">Log In</string>


    <!--관심사-->
    <string name="movie_kr">영화</string>
    <string name="movie_en">movie</string>
    <string name="hotplace_kr">맛집</string>
    <string name="hotplace_en">hot place</string>
    <string name="photo_kr">사진</string>
    <string name="photo_en">photo</string>
    <string name="classic_kr">클래식</string>
    <string name="classic_en">classic</string>
    <string name="travel_kr">여행</string>
    <string name="travel_en">travel</string>
    <string name="religion_kr">종교</string>
    <string name="religion_en">religion</string>
    <string name="sports_kr">스포츠</string>
    <string name="sports_en">sports</string>
    <string name="science_kr">과학</string>
    <string name="science_en">science</string>
    <string name="game_kr">게임</string>
    <string name="game_en">game</string>
    <string name="arts_kr">예술</string>
    <string name="arts_en">arts</string>
    <string name="drama_kr">드라마</string>
    <string name="drama_en">drama</string>
    <string name="music_kr">음악</string>
    <string name="music_en">music</string>
    <string name="theater_kr">연극</string>
    <string name="theater_en">theater</string>
    <string name="electronics_kr">전자기기</string>
    <string name="electronics_en">electronics</string>
    <string name="poem_kr">시</string>
    <string name="poem_em">poem</string>
    <string name="IT_kr">IT</string>
    <string name="IT_en">IT</string>
    <string name="fashion_kr">패션</string>
    <string name="fashion_en">fashion</string>
    <string name="fitness_kr">피트니스</string>
    <string name="fitness_en">fitness</string>
    <string name="beauty_kr">뷰티</string>
    <string name="beauty_en">beauty</string>
    <string name="novel_kr">소설</string>
    <string name="novel_en">novel</string>
    <string name="philosophy_kr">철학</string>
    <string name="philosophy_en">philosophy</string>

    <string name="interestLimitSnackbar_kr">관심사는 세개까지 선택 가능합니다.</string>
    <string name="interestLimitSnackbar_en">Up to 2 can be selected.</string>
    <string name="interestLimitSnackbar2_kr">관심사는 세개까지 선택 가능합니다.</string>
    <string name="interestLimitSnackbar2_en">Up to 2 can be selected.</string>

    <string name="interestSnackbar_kr">관심사를 선택해주세요.</string>
    <string name="interestSnackbar_en">Select 3 interests.</string>
    <string name="korean_kr">한국어</string>
    <string name="english_en">ENG</string>
    <string name="from">From.</string>
    <string name="to">to.</string>


    <!--편지쓰기 칸-->
    <string name="writeMail_kr">편지 쓰기</string>
    <string name="writeMail_en">write letter</string>
    <string name="sendLetterWarning_kr">편지가 발송됩니다.\n계속하시겠습니까?</string>
    <string name="sendLetterWarning_en">Send letter.\nContinue?</string>
    <string name="cantCancel_kr">발송된 편지는 취소할 수 없습니다.</string>
    <string name="cantCancel_en">can\'t cancel already sent.</string>
    <string name="comfirm_kr">확인</string>
    <string name="comfirm_en">confirm</string>
    <string name="cancel_kr">취소</string>
    <string name="cancel_en">cancel</string>
    <string name="register_profile_photo_kr">프로필 사진 등록하기</string>
    <string name="register_profile_photo_en">Register profile photo.</string>
    <string name="termsOfUse_kr">이용 약관</string>
    <string name="notificationSetting_kr">알림 설정</string>
    <string name="nation_kr">국가</string>
    <string name="setInterests_kr">관심사 설정</string>
    <string name="setInterests_en">Set Interests</string>
    <string name="selectInterests_kr">편지에 담은 관심사를 선택해 주세요.(2개)</string>
    <string name="selectInterests_en">select interests you want to write about.(2)</string>


    <!--로그인-->


    <!--메인 드로어-->
    <string name="logout_kr">로그아웃</string>
    <string name="logout_en">logout</string>
    <string name="letterBox_kr">편지 보관함</string>
    <string name="letterBox_en">letter box</string>
    <string name="setting_kr">설정</string>
    <string name="setting_en">setting</string>
    <string name="upgrade_kr">업그레이드</string>
    <string name="upgrade_en">upgrade</string>


    <!--메일 읽기-->
    <string name="readMail_kr">편지 읽기</string>
    <string name="readMail_en">read letter</string>
    <string name="reply_kr">답장하기</string>
    <string name="reply_en">reply</string>


    <!--개선의견 보내기-->
    <string name="sendFeedback_kr">개선점 보내기</string>
    <string name="sendFeedback_en">Send</string>
    <string name="contact">contact</string>


</resources>
