<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.commontalks.analogpenpal.view.StartActivity"
    android:theme="@android:style/Theme.Translucent"
    >

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:elevation="4dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/startActivityToolbar"
        android:visibility="gone"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



        </FrameLayout>

    </android.support.v7.widget.Toolbar>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgorund_landing"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000"
            android:alpha="0.45"
            >
        </FrameLayout>
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:layout_width="240dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@id/startActivityToolbar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo_title"
        android:id="@+id/startLogo"
        />


    <TextView
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@drawable/longhotdog_button"
        app:layout_constraintBottom_toTopOf="@id/startSignInBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="10dp"
        android:text="@string/login_kr"
        android:gravity="center"
        android:textColor="#FFF"
        android:id="@+id/startLogInBtn"
        />

    <TextView
        android:layout_width="150dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@id/koreanBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="50dp"
        android:text="@string/signin_kr"
        android:gravity="center"
        android:textColor="#FFF"
        android:background="@drawable/longhotdog_button"
        android:id="@+id/startSignInBtn"

        />

    <TextView
        android:layout_width="65dp"
        android:layout_height="25dp"
        android:background="@drawable/button_hotdog_cliked_language"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="72.5dp"
        android:layout_marginBottom="65dp"
        android:gravity="center"
        android:textColor="#FFF"
        android:textSize="12sp"
        android:id="@+id/koreanBtn"
        android:text="@string/korean_kr"
        />


    <TextView
        android:layout_width="65dp"
        android:layout_height="25dp"
        android:background="@drawable/button_hotdog_language"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="72.5dp"
        android:layout_marginBottom="65dp"
        android:gravity="center"
        android:textColor="#FFF"
        android:textSize="12sp"
        android:id="@+id/englishBtn"
        android:text="@string/english_en"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#897e6b"
        android:id="@+id/loadingLayout"
        >

        <ImageView
            android:layout_width="112.5dp"
            android:layout_height="75dp"
            android:src="@drawable/logo_title"
            android:layout_gravity="center"
            />


    </FrameLayout>

</android.support.constraint.ConstraintLayout>
